--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^5.1.3",
     "d3": "^7.4.0",
     "history": "^5.2.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-nvd3": "^0.5.7",
     "react-popper": "^2.2.5",
