--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "name": "reactexample",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:5000",
+  // "proxy": "http://127.0.0.1:5000",
+  "proxy": "http://backendapps:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
